fix: issues after merging with main